tests/ui/g-route-three-arms.stderr
error[E0080]: evaluation panicked: route must have exactly 2 arms (use nested routes for N-way branching)
  --> tests/ui/g-route-three-arms.rs:42:5
   |
42 |     g::route(builder)
   |     ^^^^^^^^^^^^^^^^^ evaluation of `ROUTE` failed inside this call
   |
note: inside `hibana::route::<0, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<3>, GenericCapToken<RouteArmKind<3>>, CanonicalControl<RouteArmKind<3>>>>, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<4>, GenericCapToken<RouteArmKind<4>>, CanonicalControl<RouteArmKind<4>>>>, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<5>, GenericCapToken<RouteArmKind<5>>, CanonicalControl<RouteArmKind<5>>>>, StepNil>>>>`
  --> src/global.rs
   |
   |     program::route::<CONTROLLER, Steps>(builder)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::program::route::<0, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<3>, GenericCapToken<RouteArmKind<3>>, CanonicalControl<RouteArmKind<3>>>>, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<4>, GenericCapToken<RouteArmKind<4>>, CanonicalControl<RouteArmKind<4>>>>, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<5>, GenericCapToken<RouteArmKind<5>>, CanonicalControl<RouteArmKind<5>>>>, StepNil>>>>`
  --> src/global/program.rs
   |
   |     builder.finish()
   |     ^^^^^^^^^^^^^^^^
note: inside `RouteChainBuilder::<0, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<3>, GenericCapToken<RouteArmKind<3>>, CanonicalControl<RouteArmKind<3>>>>, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<4>, GenericCapToken<RouteArmKind<4>>, CanonicalControl<RouteArmKind<4>>>>, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<5>, GenericCapToken<RouteArmKind<5>>, CanonicalControl<RouteArmKind<5>>>>, StepNil>>>>::finish`
  --> src/global/program.rs
   |
   |             panic!("route must have exactly 2 arms (use nested routes for N-way branching)");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
